hphp/test/slow/reified_generics/param-verification-9.php.expectf
Catchable fatal error: Argument 1 passed to f() must be an instance of C<int>, given C<string> in %s on line 10
